@@ -10,10 +10,8 @@ var defaultSettings = {
 	provider_nzbclub: true,
 	provider_bintube: true,
 	provider_binsearch: true,
-    provider_mysterbin: true,
 	provider_nzbindex: true,
 	provider_nzbsrus: true,
-	provider_nzbdotsu: true,
 	provider_fanzub: true,
 	provider_yubse: true,
 	provider_newznab: 'your_newznab.com, some_other_newznab.com',
