@@ -3,6 +3,7 @@ Version 0.6.0
 New feature: Settings are now synced to and from your Google account, if you enabled sync in Chrome.
 Improvement: One-click support for binsearch.info
 Improvement: Added category for nzbx.co one-click
+Removed: nzb.su, mysterbin.com support (sites are gone)
 
 Version 0.5.22
 --------------
